finish solutions for chpt4.

--- a/lna/solutions/chpt2_rexp/chapter2.tex
+++ b/lna/solutions/chpt2_rexp/chapter2.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{listings}
 \usepackage[a4paper, left = 2cm, right = 2cm]{geometry}
+\usepackage[colorlinks, urlcolor=blue]{hyperref}
 % \usepackage{ctex}
 
 
@@ -9,8 +10,8 @@
 
 \begin{titlepage}
     \title{Chapter 2}
-    \author{Zac Bi}
-    \date{\today}
+    \author{\href{https://github.com/ZacBi}{Zac Bi}}
+    \date{December 2, 2019}
     \maketitle
     \pagestyle{empty}
 \end{titlepage}
