--- a/lna/solutions/chpt3_ngrams/chpt3.tex
+++ b/lna/solutions/chpt3_ngrams/chpt3.tex
@@ -10,8 +10,8 @@
 
 
 \begin{titlepage}
-    \title{Chapter 2}
-    \author{Zac Bi}
+    \title{Chapter 3}
+    \author{\href{https://github.com/ZacBi}{Zac Bi}}
     \date{December 9, 2019}
     \maketitle
     \thispagestyle{empty}
