--- a/lna/notes/chpt8/chpt8.tex
+++ b/lna/notes/chpt8/chpt8.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \usepackage{listings}
-\usepackage{xeCJK}
+\usepackage{ctex}
 \usepackage{amsmath}
 \usepackage[a4paper, left = 2cm, right = 2cm]{geometry}
 \usepackage[colorlinks, urlcolor=blue]{hyperref}
